[package]
name = "float_eq"
version = "0.1.2"
authors = ["jtempest"]
license = "MIT OR Apache-2.0"
description = "Explicit and deliberate comparison of IEEE floating point numbers."
homepage = "https://github.com/jtempest/float_eq-rs"
repository = "https://github.com/jtempest/float_eq-rs"
documentation = "https://docs.rs/float_eq/"
keywords = ["approximate", "assert", "comparison", "equality", "float"]
categories = ["algorithms", "development-tools::debugging", "no-std"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[badges]
travis-ci = { repository = "jtempest/float_eq-rs" }

[features]
default = ["std"]
std = []

[dependencies]
