[package]
name = "float_eq"
version = "1.0.2-pre"
authors = ["jtempest"]
license = "MIT OR Apache-2.0"
description = "Compare IEEE floating point primitives, structs and collections for equality."
homepage = "https://jtempest.github.io/float_eq-rs/"
repository = "https://github.com/jtempest/float_eq-rs"
documentation = "https://jtempest.github.io/float_eq-rs/book/"
keywords = ["approximate", "assert", "comparison", "equality", "float"]
categories = ["algorithms", "development-tools::debugging", "no-std"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "jtempest/float_eq-rs" }
# Turned off for now since coveralls has better support for testing multiple 
# feature sets, and thus is more representative.
# codecov = { repository = "jtempest/float_eq-rs" }
coveralls = { repository = "jtempest/float_eq-rs" }

[dev-dependencies]
trybuild = "1"

[dependencies.num-complex]
version = "0.4"
optional = true

[dependencies.float_eq_derive]
version = "=1.0.1"
optional = true
path = "../float_eq_derive"

[features]
default = ["std"]
std = []
num = ["num-complex"]
derive = ["float_eq_derive"]